--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@solana/web3.js": "^1.41.3",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
+    "@vitejs/plugin-react": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
-    "vite": "^3.0.4",
-    "@vitejs/plugin-react": "^2.0.0"
+    "vite": "^3.0.4"
+  },
+  "devDependencies": {
+    "@types/node": "^18.14.0"
   }
 }
