--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ReplitReactjsProject",
   "version": "0.0.1",
+  "homepage": "http://92.222.181.202/gifterest/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
