--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReplitReactjsProject",
+  "name": "gifterest",
   "version": "0.0.1",
   "homepage": "http://92.222.181.202/gifterest/",
   "scripts": {
