--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gifterest",
   "version": "0.0.1",
-  "homepage": "http://92.222.181.202/gifterest/",
+  "homepage": "http://92.222.181.202/Gifterest-front/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
